@@ -1,7 +1,9 @@
 METASOURCES = AUTO
 
-check_PROGRAMS = 01_lputil_intlen 01_lputil_splitstr 02_lpatom_parse 03_lpxpak
-TESTS = 01_lputil_intlen 01_lputil_splitstr 02_lpatom_parse 03_lpxpak
+check_PROGRAMS = 01_lputil_intlen 01_lputil_splitstr 02_lpatom_parse	\
+03_lpxpak 04_lparchives
+TESTS = 01_lputil_intlen 01_lputil_splitstr 02_lpatom_parse 03_lpxpak	\
+04_lparchives
 
 01_lputil_intlen_SOURCES = 01_lputil_intlen.c
 01_lputil_intlen_LDFLAGS = $(all_libraries)
@@ -18,6 +20,10 @@ TESTS = 01_lputil_intlen 01_lputil_splitstr 02_lpatom_parse 03_lpxpak
 03_lpxpak_SOURCES = 03_lpxpak.c 03_lpxpak.tbz2
 03_lpxpak_LDFLAGS = $(all_libraries)
 03_lpxpak_LDADD = ../src/libportage.la
+
+04_lparchives_SOURCES = 04_lparchives.c 04_lparchives.tbz2 04_lparchives.txt
+04_lparchives_LDFLAGS = $(all_libraries)
+04_lparchives_LDADD = ../src/libportage.la
 
 AM_CPPFLAGS = -I$(top_srcdir)/include
 
